--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.scss
@@ -23,3 +23,12 @@
   opacity: 0.8;
   z-index: 1000;
 }
+.tab-label {
+  min-width: 72px;
+}
+// .stretch-tab-reserva{
+//   max-width: 10px;
+// }
+// .stretched-tabs {
+//   max-width: 100px;
+// }
