Historico de Clientes
- Añadida vista del historico de clientes
- Se quito minimo de fechas en modifca huesped
- se quito restriccione de escoger habitacion al cambiar solo fechas en modifica huesped

--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -151,7 +151,75 @@
         </div>
       </li>
       <!-- end::1 Level -->
+      <li
+        class="menu-item menu-item-submenu"
+        aria-haspopup="true"
+        data-menu-toggle="hover"
+        routerLinkActive="menu-item-open"
+      >
+      <a
+      class="menu-link"
+      routerLink="/reportes/clientes"
+      routerLinkActive="active"
+    >
+          <span
+            [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'"
+            cacheSVG="true"
+            class="svg-icon menu-icon"
+          ></span>
+          <span class="menu-text">Lista de Clientes</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="menu-submenu">
+          <ul class="menu-subnav">
+           <!-- <li class="menu-item" aria-haspopup="true">
+              <span class="menu-link">
+                <span class="menu-text">Reportes</span>
+              </span>
+            </li> -->
 
+            <!-- begin::2 Level -->
+            <!-- <li
+              class="menu-item"
+              aria-haspopup="true"
+              data-menu-toggle="hover"
+              routerLinkActive="menu-item-active"
+            >
+              <a
+                class="menu-link"
+                routerLink="/reportes/customers"
+                routerLinkActive="active"
+              >
+                <i class="menu-bullet menu-bullet-dot">
+                  <span></span>
+                </i>
+                <span class="menu-text">Lista de Húespedes</span>
+              </a>
+            </li> -->
+            <!-- end::2 Level -->
+
+            <!-- begin::2 Level -->
+            <!-- <li
+              class="menu-item"
+              aria-haspopup="true"
+              data-menu-toggle="hover"
+              routerLinkActive="menu-item-active"
+            >
+              <a
+                class="menu-link"
+                routerLink="/ecommerce/products"
+                routerLinkActive="active"
+              >
+                <i class="menu-bullet menu-bullet-dot">
+                  <span></span>
+                </i>
+                <span class="menu-text">Con Saldo</span>
+              </a>
+            </li> -->
+            <!-- end::2 Level -->
+          </ul>
+        </div>
+      </li>
 
 
 <!-- Applications -->
