--- a/src/app/pages/reportes/customers/components/helpers/modifica-huesped/modifica-huesped.component.html
+++ b/src/app/pages/reportes/customers/components/helpers/modifica-huesped/modifica-huesped.component.html
@@ -150,7 +150,7 @@
           <input formControlName="fechaInicial" hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker [minDate]=minDate
           (dateSelect)="fechaSeleccionadaInicial($event)" #d="ngbDatepicker">
 
-          <input class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fullFechaLlegada" >
+          <input class="form-control" disabled (click)="toggleCalendarioInicial()" placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fullFechaLlegada" >
 
           <div class="input-group-append">
             <button class="btn btn-primary" (click)="toggleCalendarioInicial()" type="button">
@@ -172,7 +172,7 @@
             <input formControlName="fechaFinal" hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker [minDate]=minDate
             (dateSelect)="fechaSeleccionadaFinal($event)" #f="ngbDatepicker">
 
-            <input class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fullFechaSalida" >
+            <input class="form-control" disabled (click)="toggleCalendarioFinal()"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fullFechaSalida" >
 
             <div class="input-group-append">
               <button class="btn btn-primary" (click)="toggleCalendarioFinal()" type="button">
@@ -187,41 +187,20 @@
           </div>
         </div>
       </div> 
-      
-      <div  class="col-sm-6">
-        <ngb-datepicker [hidden]="fechaInicialDisplay" #dp [minDate]=minDate
-        (dateSelect)="fechaSeleccionadaInicial($event)" ></ngb-datepicker>
-      </div>
 
-        <div class="col-sm-6">
-          <br>
-          <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
-          <div class="form-group" >
-            <div class="input-group">
-              <input hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker [minDate]=minDate
-              (dateSelect)="fechaSeleccionadaFinal($event)" [footerTemplate]="footerTemplate" #f="ngbDatepicker">
 
-              <input class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fullFechaSalida" >
 
-              <div class="input-group-append">
-                <button class="btn btn-primary" (click)="toggleCalendarioFinal()" type="button">
-                  <i class="fa fa-calendar icon"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div> 
         <ng-template #footerTemplate>
           <hr class="my-0">
           <button class="btn btn-primary btn-sm m-2 float-left" (click)="f.close()">Today</button>
           <button class="btn btn-secondary btn-sm m-2 float-right" (click)="f.close()">Close</button>
         </ng-template>
         <div  class="col-sm-6">
-          <ngb-datepicker [hidden]="fechaInicialDisplay" #dp [minDate]=minDate
+          <ngb-datepicker [hidden]="fechaInicialDisplay" #dp 
           (dateSelect)="fechaSeleccionadaInicial($event)" ></ngb-datepicker>
         </div>
         <div   class="col-sm-6">
-          <ngb-datepicker [hidden]="fechaFinalDisplay" [minDate]=minDate
+          <ngb-datepicker [hidden]="fechaFinalDisplay" 
           (dateSelect)="fechaSeleccionadaFinal($event)" #df ></ngb-datepicker>
         </div>
     </div>
@@ -405,7 +384,7 @@
       
 
       <div class="col-lg-6">
-        <button  (click)="revisaDatos()"  class="btn btn-warning btn-block" type="submit">
+        <button  (click)="actualizarDatos()"  class="btn btn-warning btn-block" type="submit">
           Actualizar y Guardar
         </button>
         <br>
