--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/helpers/detalle/detalle.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/helpers/detalle/detalle.component.html
@@ -64,7 +64,7 @@
         <label class="control-label">ID de Pago:</label>
         <br />
         &nbsp;
-        <label>{{row._id}}</label>
+        <label>{{row._id.substring(0,5)}}</label>
       </div>
     </div>
 
@@ -74,7 +74,16 @@
         <label class="control-label">Concepto:</label>
         <br />
         &nbsp;
-        <label>{{row.Descripcion}} </label>
+        <ng-container *ngIf="row.Forma_de_Pago=='Descuento'">
+          <label> Descuento ({{row.Descripcion.split('(')[1]}}</label>
+        </ng-container>
+        <ng-container *ngIf="row.Referencia=='Anticipo' && row.Estatus!='Cancelado'">
+          Anticipo (A)
+         </ng-container>
+         <ng-container *ngIf="row.Referencia=='Anticipo' && row.Estatus=='Cancelado'">
+          Anticipo (X)
+         </ng-container>
+        <label *ngIf="row.Forma_de_Pago!='Descuento' || row.Referencia!='Anticipo'"> {{row.Descripcion}}</label>
       </div>
       <div class="col-md-6">
         <br />
@@ -149,6 +158,9 @@
           >
           <br />
           &nbsp;
+          <ng-container *ngIf="row.Forma_de_Pago=='Descuento'">
+            <label>{{row.Descripcion.split('(')[0]}}</label>
+          </ng-container>
           <label>{{row.Descripcion}}</label>
         </div>
        
