--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
@@ -305,14 +305,14 @@
         (change)="selectedRadioButton($event)"
         [checked]="porcentajeChecked"
         id="porcentaje"
-        class="example-margin">POERCENTAJE</mat-radio-button>
+        class="example-margin">POERCENTAJE (%)</mat-radio-button>
       </div>
       <div style="margin-top: 5px" class="col-sm-4">
         <mat-radio-button 
         class="example-margin" 
         [checked]="precioFijoChecked"
         id="precioFijo"
-        (change)="selectedRadioButton($event)">PRECIO FIJO</mat-radio-button>
+        (change)="selectedRadioButton($event)">PRECIO FIJO ($)</mat-radio-button>
       </div>
       <div class="col-sm-4"  >
         <input
@@ -343,6 +343,10 @@
     value=""
   />
 </div>
+
+
+
+
 <br>
 <div class="col-lg-12">
   <button           
@@ -373,13 +377,6 @@
     id="todos"
     class="example-margin">Todos</mat-radio-button>
   </div>
-  <!-- <div style="margin-top: 5px" class="col-sm-3">
-    <mat-radio-button 
-    class="example-margin" 
-    [checked]="activosChecked"
-    id="activos"
-    (change)="selectedTable($event)">Activos</mat-radio-button>
-  </div> -->
   <div style="margin-top: 5px" class="col-sm-4">
     <mat-radio-button 
     class="example-margin" 
@@ -398,21 +395,21 @@
 </div>
 <div class="row col-md-12" style="justify-content: center;">
 
-  <div style="margin-top: 5px" class="col-sm-4">
+  <div style="margin-top: 5px" class="col-sm-6">
     <mat-radio-button 
     class="example-margin" 
     [checked]="canceladosChecked"
     id="cancelados"
-    (change)="selectedTable($event)">Cancelados</mat-radio-button>
+    (change)="selectedTable($event)">Cancelaciones y Devoluciones</mat-radio-button>
   </div>
-  <div style="margin-top: 5px" class="col-sm-4">
+  <!-- <div style="margin-top: 5px" class="col-sm-4">
     <mat-radio-button 
     class="example-margin" 
     [checked]="devolucionesChecked"
     id="devoluciones"
     (change)="selectedTable($event)">Devoluciones</mat-radio-button>
-  </div>
-  <div style="margin-top: 5px" class="col-sm-4">
+  </div> -->
+  <div style="margin-top: 5px" class="col-sm-6">
     <mat-radio-button 
     (change)="selectedTable($event)"
     [checked]="descuentosChecked"
@@ -450,14 +447,16 @@
        <th class="concepto-columna" mat-header-cell  *matHeaderCellDef mat-sort-header> Concepto </th>
        <td class="concepto-columna"  mat-cell *matCellDef="let row">
          <ng-container *ngIf="row.Referencia!='Anticipo'">
-          <ng-container *ngIf="row.Forma_de_Pago!='Descuento'">
-            {{row.Descripcion}} 
-           </ng-container>
-            <ng-container *ngIf="row.Cargo!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo'">(C)</ng-container>  
-            <ng-container *ngIf="row.Abono!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo'">(A)</ng-container>  
-            <ng-container *ngIf="row.Estatus=='Cancelado'">(X)</ng-container>  
+          <ng-container *ngIf="row.Forma_de_Pago!='Descuento'"> {{row.Descripcion}} </ng-container>
+          <ng-container *ngIf="row.Cargo!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo' && row.Cantidad >1">($ {{row.Cargo.toLocaleString()}} x {{row.Cantidad}}) (C)</ng-container>  
+          <ng-container *ngIf="row.Cargo!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo' && row.Cantidad ==1">(C)</ng-container>  
+          <ng-container *ngIf="row.Abono!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo'">(A)</ng-container>  
+            <ng-container *ngIf="row.Estatus=='Cancelado' && row.Forma_De_Pago!='Descuento'">{{row.Descripcion}} (X)</ng-container>  
             <ng-container *ngIf="row.Estatus=='Devolucion'">(R)</ng-container>  
-            <ng-container *ngIf="row.Forma_de_Pago=='Descuento' && row.Estatus!='Cancelado'">Descuento ({{row.Descripcion.split('(')[1]}} (D)</ng-container>  
+            <ng-container *ngIf="row.Forma_de_Pago=='Descuento' && row.Estatus!='Cancelado' && row.Descripcion.indexOf('%') > -1 && row.Estatus=='Activo'">Descuento ({{row.Descripcion.split("(")[1]}} (D)</ng-container>  <!--REGEX ?<=( ?<= : Means Preceded by, then '')'' is the real split caracter-->
+            <ng-container *ngIf="row.Forma_de_Pago=='Descuento' && row.Estatus!='Cancelado' && row.Descripcion.indexOf('%') == -1 && row.Estatus=='Activo'">Descuento (D)</ng-container> 
+            <ng-container *ngIf="row.Forma_de_Pago=='Descuento' && row.Estatus!='Cancelado' && row.Descripcion.indexOf('%') > -1 && row.Estatus!='Activo'">Descuento ({{row.Descripcion.split("(")[1]}} (X)</ng-container>  <!--REGEX ?<=( ?<= : Means Preceded by, then '')'' is the real split caracter-->
+            <ng-container *ngIf="row.Forma_de_Pago=='Descuento' && row.Estatus!='Cancelado' && row.Descripcion.indexOf('%') == -1 && row.Estatus!='Activo'">Descuento (X)</ng-container> 
          </ng-container>
          <ng-container *ngIf="row.Referencia=='Anticipo' && row.Estatus!='Cancelado'">
           Anticipo (A)
