--- a/src/app/pages/reportes/customers/customers.component.html
+++ b/src/app/pages/reportes/customers/customers.component.html
@@ -186,7 +186,7 @@
             <td style="text-align: center;">{{ huesped.noches }}</td>
             <!-- <td>{{ huesped.tarifa }}</td>
             <td>{{ huesped.porPagar }}</td> -->
-            <td>$ {{ huesped.pendiente.toLocaleString("es-MX") }}</td>
+            <td>$ {{ customerService.getCurrentHuespedValue.pendiente.toLocaleString("es-MX") }}</td>
             <td style="display:none;">{{ huesped.origen }}</td>
             <!-- <td>{{ huesped.habitacion }}</td> -->
 
