--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -58,22 +58,6 @@
       </li>
       <!-- end::1 Level -->
 
-      <!-- begin::1 Level -->
-      <!-- <li
-        class="menu-item"
-        aria-haspopup="true"
-        routerLinkActive="menu-item-active"
-      >
-        <a class="menu-link" routerLink="/reportes" routerLinkActive="active">
-          <span
-            [inlineSVG]="'./assets/media/svg/icons/Home/Library.svg'"
-            cacheSVG="true"
-            class="svg-icon menu-icon"
-          ></span>
-          <span class="menu-text">Reportes</span>
-        </a>
-      </li> -->
-      <!-- end::1 Level -->
 
 
 
@@ -316,9 +300,27 @@
         </a>
       </li> -->
       <!-- end::1 Level -->
+      <hr>
 
+          <!-- begin::1 Level -->
+          <li
+          class="menu-item"
+          aria-haspopup="true"
+          routerLinkActive="menu-item-active"
+        >
+          <a class="menu-link" routerLink="/parametros" routerLinkActive="active">
+            <span
+              [inlineSVG]="'./assets/media/svg/icons/Home/Library.svg'"
+              cacheSVG="true"
+              class="svg-icon menu-icon"
+            ></span>
+            <span class="menu-text">Parametros</span>
+          </a>
+        </li>
+        <!-- end::1 Level -->
     </ul>
     <!-- end::Menu Nav -->
+
   </div>
   <!--end::Menu Container-->
 </div>
