--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -43,25 +43,37 @@
 
   <br />
   <!-- </div>  -->
-  <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='Huesped en Casa'||customerService.getCurrentHuespedValue.estatus=='Check-Out'||customerService.getCurrentHuespedValue.estatus=='Uso Interno'||customerService.getCurrentHuespedValue.estatus=='Bloqueo / Sin Llegadas'||customerService.getCurrentHuespedValue.estatus=='Reserva Temporal'">
-    <mat-select  disabled style="width:160px; color: white; font-weight: bold; font-size: larger; " [(value)]="customerService.getCurrentHuespedValue.estatus" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
-      <mat-option #option [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)"  [value]="customerService.getCurrentHuespedValue.estatus">{{customerService.getCurrentHuespedValue.estatus}}</mat-option>
-    </mat-select>
-  </ng-container>
-  <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='Reserva Sin Pago'||customerService.getCurrentHuespedValue.estatus=='Deposito Realizado'||customerService.getCurrentHuespedValue.estatus=='Esperando Deposito'||customerService.getCurrentHuespedValue.estatus=='Totalmente Pagada'||customerService.getCurrentHuespedValue.estatus=='Reserva Confirmada'">
-    <mat-select style="width: 160px; color: white; font-weight: bold; font-size: larger;  " #selected [(value)]="customerService.getCurrentHuespedValue.estatus"  (selectionChange)="openDialog(huesped)" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn" >
-      <ng-container *ngFor="let estatus of estatusArray">
-        <ng-container  *ngIf="estatus.id==2||estatus.id==3||estatus.id==8||estatus.id==9||estatus.id==10">
-          <mat-option #option [style.background-color]="estatus.color" [value]="estatus.estatus">{{estatus.estatus}}</mat-option>
-        </ng-container>
+  <div class="container">
+    <div class="col-lg-8">
+      <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='Huesped en Casa'||customerService.getCurrentHuespedValue.estatus=='Check-Out'||customerService.getCurrentHuespedValue.estatus=='Uso Interno'||customerService.getCurrentHuespedValue.estatus=='Bloqueo / Sin Llegadas'||customerService.getCurrentHuespedValue.estatus=='Reserva Temporal'">
+        <mat-select  disabled style="width:160px; color: white; font-weight: bold; font-size: larger; " [(value)]="customerService.getCurrentHuespedValue.estatus" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
+          <mat-option #option [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)"  [value]="customerService.getCurrentHuespedValue.estatus">{{customerService.getCurrentHuespedValue.estatus}}</mat-option>
+        </mat-select>
       </ng-container>
-    </mat-select>
-  </ng-container>
-  <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='No Show'||customerService.getCurrentHuespedValue.estatus=='Reserva Cancelada'">
-    <mat-select style="width:160px" [(value)]="customerService.getCurrentHuespedValue.estatus" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
-      <mat-option #option [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" [value]="customerService.getCurrentHuespedValue.estatus">{{customerService.getCurrentHuespedValue.estatus}}</mat-option>
-    </mat-select>
-  </ng-container>
+      <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='Reserva Sin Pago'||customerService.getCurrentHuespedValue.estatus=='Deposito Realizado'||customerService.getCurrentHuespedValue.estatus=='Esperando Deposito'||customerService.getCurrentHuespedValue.estatus=='Totalmente Pagada'||customerService.getCurrentHuespedValue.estatus=='Reserva Confirmada'">
+        <mat-select style="width: 160px; color: white; font-weight: bold; font-size: larger;  " #selected [(value)]="customerService.getCurrentHuespedValue.estatus"  (selectionChange)="openDialog(huesped)" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn" >
+          <ng-container *ngFor="let estatus of estatusArray">
+            <ng-container  *ngIf="estatus.id==2||estatus.id==3||estatus.id==8||estatus.id==9||estatus.id==10">
+              <mat-option #option [style.background-color]="estatus.color" [value]="estatus.estatus">{{estatus.estatus}}</mat-option>
+            </ng-container>
+          </ng-container>
+        </mat-select>
+      </ng-container>
+      <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='No Show'||customerService.getCurrentHuespedValue.estatus=='Reserva Cancelada'">
+        <mat-select style="width:160px" [(value)]="customerService.getCurrentHuespedValue.estatus" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
+          <mat-option #option [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" [value]="customerService.getCurrentHuespedValue.estatus">{{customerService.getCurrentHuespedValue.estatus}}</mat-option>
+        </mat-select>
+      </ng-container>
+    </div>
+    <div class="col-lg-4">
+      <mat-select style="width: 160px; color: white; font-weight: bold; font-size: larger;  " name="estatusAma" id="amaDellaves" class="btn" >
+        <ng-container *ngFor="let estatusAmaDeLlaves of amaDeLlavesList" >
+          <mat-option [value]="amaDeLlaves.Descripcion" [style.background-color]="backgroundColorAmadeLlaves(estatusAmaDeLlaves.Estatus)"> {{estatusAmaDeLlaves.Descripcion}}</mat-option>
+        </ng-container>
+      </mat-select>
+    </div>
+  </div>
+  
 <br>
 
   <!-- <div style="background-color: #00506a;" class="col-md-12 cursor-default modal-content "> -->
